k8s/api-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: kube-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: control-plane
    app.kubernetes.io/name: kube-apiserver
  ports:
    - name: api
      port: 6443
      targetPort: 6443
      protocol: TCP
