k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared
  namespace: default
spec:
  gatewayClassName: envoy
  addresses:
    - type: NamedAddress
      value: lb.prod.juliamertz.dev
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: tls-cert-gateway
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: v1
kind: Service
metadata:
  name: envoy-nodeport
  namespace: envoy-gateway-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: shared
    gateway.envoyproxy.io/owning-gateway-namespace: default
  ports:
    - name: http-80
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 10080
    - name: https-443
      nodePort: 30443
      port: 443
      protocol: TCP
      targetPort: 10443
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
