k8s/adsb-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adsb-proxy
  template:
    metadata:
      labels:
        app: adsb-proxy
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: adsb-proxy-config

---
apiVersion: v1
kind: Service
metadata:
  name: adsb-proxy
  namespace: default
spec:
  selector:
    app: adsb-proxy
  ports:
    - port: 8000
      targetPort: http


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adsb-proxy
  namespace: default
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - adsb-proxy.juliamertz.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adsb-proxy
          port: 8000

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: rate-limit-adsb-proxy
  namespace: default
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: adsb-proxy
  loadBalancer:
    type: LeastRequest
  rateLimit:
    type: Global
    global:
      rules:
        - limit:
            requests: 5
            unit: Second
